# ai-bartender

./: MakeFile  README.md  pyproject.toml
backend/: main.py  models.py
chatlog/: 20230404.md
frontend/ai-bartender/: package-lock.json  package.json
frontend/ai-bartender/src/: App.js
frontend/ai-bartender/src/components/: CocktailCard.js  CocktailList.js  Footer.js  Header.js  InputForm.js
